--- a/src/pages/tag/[tag]/[page].astro
+++ b/src/pages/tag/[tag]/[page].astro
@@ -48,7 +48,7 @@ type CacheData = {
 }
 
 export async function getData() {
-  const sourcePosts = await Astro.glob(['../../**/*.md', '../../**/*.mdx']) satisfies MarkdownInstance[];
+  const sourcePosts = await Astro.glob(['../../**/*.md*']) satisfies MarkdownInstance[];
     
   const data: CacheData = { posts: [], tags: []};
 
