Tweak search page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -637,7 +637,7 @@ nav.site-nav h2 {
     z-index: 1;
 }
 
-.site-search-results {
+header .site-search-results {
     background-color: var(--white);
     position: absolute;
     top: var(--search-height);
@@ -667,7 +667,7 @@ nav.site-nav h2 {
     margin-inline-start: 0;
 }
 
-.site-search-results ul:not(.post-list):not(.result-headings) {
+header .site-search-results ul:not(.post-list):not(.result-headings) {
     margin: 0;
     max-height: var(--search-dropdown-height);
     overflow-y: scroll;
@@ -760,7 +760,6 @@ nav.site-nav h2 {
 
 .result-wrapper {
     display: flex;
-    padding: 1.5rem 3.6rem 1.75rem;
     text-decoration: none;
     flex-direction: column;
     gap: 0.56rem;
@@ -768,6 +767,10 @@ nav.site-nav h2 {
     @media (max-width: 930px) {
         padding: 1rem;
     }
+}
+
+header .result-wrapper {
+    padding: 1.5rem 3.6rem 1.75rem;
 }
 
 .result-wrapper:hover {
@@ -882,8 +885,11 @@ nav.site-nav h2 {
 
 .result-headings li {
     text-align: left;
-    padding: 0.1rem 3.6rem;
     font-size: 1rem;
+}
+
+header .result-headings li {
+    padding: 0.1rem 3.6rem;
 }
 
 .show-more {
