--- a/public/css/main.css
+++ b/public/css/main.css
@@ -297,8 +297,8 @@ nav.skip-links a:focus {
     top: 0;
     z-index: 10;
     gap: 1rem;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto 40px 40px;
     align-items: center;
 }
 
@@ -316,23 +316,18 @@ nav.skip-links a:focus {
 .site-header .site-title {
     letter-spacing: -1px;
     text-transform: uppercase;
+    text-align: left;
 
     @media (min-width: 338px) {
         flex-shrink: 0;
     }
 }
 
-.site-header .navigation-icon {
+.site-header .header-icon {
     --icon-width: 40px;
-    stroke: var(--link-head);
-    border: 1px solid var(--link-head);
-    border-radius: calc(var(--icon-width) / 2);
+    stroke: var(--icon-head);
     width: var(--icon-width);
     height: var(--icon-width);
-}
-
-.site-header .search-icon {
-    stroke: var(--link-head);
 }
 
 /* Navigation */
@@ -616,329 +611,6 @@ nav.site-nav h2 {
 }
 
 /* Site Search */
-
-.site-search-wrapper {
-    position: relative;
-    width: 100%;
-    max-width: 34.75rem;
-    transition: max-width var(--search-dropdown-duration) ease-in-out;
-}
-
-.site-search-wrapper.is-active {
-    max-width: 57.8rem;
-}
-
-.site-search {
-    height: var(--search-height);
-    border-radius: var(--search-border-radius);
-    border: 1px solid var(--link-head);
-    background-color: var(--white);
-    position: relative;
-    z-index: 1;
-}
-
-header .site-search-results {
-    background-color: var(--white);
-    position: absolute;
-    top: var(--search-height);
-    width: 100%;
-    padding: 0;
-    border-radius: var(--search-border-radius);
-    border-radius: 0.9375rem;
-    list-style-type: none;
-    transition-property: padding, transform, visibility;
-    transition-duration: var(--search-dropdown-duration);
-    transition-timing-function: ease-in-out;
-    visibility: hidden;
-    transform: translateY(0) scaleY(0);
-    z-index: 1;
-    transform-origin: top;
-    will-change: transform;
-}
-
-.site-search.is-active + .site-search-results {
-    padding: 1rem 0;
-    transform: translateY(1.37rem) scaleY(1);
-    visibility: visible;
-}
-
-.site-search-results ul {
-    list-style-type: none;
-    margin-inline-start: 0;
-}
-
-header .site-search-results ul:not(.post-list):not(.result-headings) {
-    margin: 0;
-    max-height: var(--search-dropdown-height);
-    overflow-y: scroll;
-}
-
-.site-search-overlay {
-    opacity: 0;
-    visibility: hidden;
-    background: rgba(12, 26, 36, 0.3);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    transition: opacity var(--search-dropdown-duration) ease-in-out;
-    z-index: 1;
-}
-
-.site-search-wrapper.is-active .site-search-overlay {
-    opacity: 1;
-    visibility: visible;
-}
-
-.site-search-query {
-    width: 100%;
-    background: transparent;
-    height: 100%;
-    padding: 0 1rem;
-    width: calc(100% - 2rem);
-    font-size: 1.25rem;
-    color: var(--link-head);
-}
-
-.search-results-heading {
-    visibility: hidden;
-}
-
-.site-search.is-active + .site-search-results > .search-results-heading {
-    visibility: visible;
-}
-
-.site-search-results-item {
-    background-color: transparent;
-    transition-property: background-color, border-color;
-    transition-duration: var(--search-dropdown-duration);
-    transition-timing-function: ease-in-out;
-    border-bottom: 0.0625rem solid;
-    border-color: var(--search-item-border-color);
-    position: relative;
-
-    @media (max-width: 930px) {
-        padding: 1rem;
-    }
-}
-
-.site-search-results-item:hover,
-.site-search-results-item:focus-within {
-    --hover-color: rgba(13, 128, 216, 0.07);
-    background-color: var(--hover-color);
-    border-color: var(--hover-color);
-}
-
-.site-search-results-item a:hover,
-.site-search-results-item a:focus {
-    color: var(--fore-link-alt);
-}
-
-.site-search-results-item::after {
-    content: '';
-    display: inline-block;
-    width: 0.75rem;
-    height: 1.25rem;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='20' viewBox='0 0 12 20' fill='none'%3E%3Cpath d='M2 18L10 10L2 2' stroke='%230D80D8' stroke-width='2.4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-    background-size: 0.75rem 1.25rem;
-    background-repeat: no-repeat;
-    position: absolute;
-    right: 2rem;
-    top: 50%;
-    transform: translateY(-50%) translateX(-1rem);
-    opacity: 0;
-    transition-property: opacity, transform;
-    transition-duration: var(--search-dropdown-duration);
-    transition-timing-function: ease-in-out;
-}
-
-.site-search-results-item:hover::after {
-    opacity: 1;
-    transform: translateY(-50%) translateX(0);
-}
-
-.result-wrapper {
-    display: flex;
-    text-decoration: none;
-    flex-direction: column;
-    gap: 0.56rem;
-    text-align: left;
-    @media (max-width: 930px) {
-        padding: 1rem;
-    }
-}
-
-header .result-wrapper {
-    padding: 1.5rem 3.6rem 1.75rem;
-}
-
-.result-wrapper:hover {
-    background-color: initial;
-}
-
-.result-wrapper mark,
-.result-headings mark {
-    background-color: var(--aft-mark);
-}
-
-.result-path {
-    color: var(--fore-breadcrumb);
-    font-size: 0.875rem;
-    font-weight: 400;
-    display: flex;
-    gap: 0.5rem;
-    flex-wrap: wrap;
-}
-
-.result-path-icon {
-    stroke: var(--fore-breadcrumb);
-}
-
-.result-path-segment:last-child {
-    color: var(--link-head);
-}
-
-.result-title {
-    color: var(--link-head);
-    font-size: 1.25rem;
-    font-weight: 700;
-}
-
-.result-description {
-    color: var(--fore-head);
-    font-size: 1rem;
-    font-weight: 400;
-    margin: 0;
-}
-
-.site-search > fieldset {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 1rem;
-}
-
-.site-search-remove {
-    margin-left: auto;
-    background-color: transparent;
-    padding: 0.5rem;
-    cursor: pointer;
-    visibility: hidden;
-    transition: transform var(--search-dropdown-duration) ease-in-out;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.site-search-remove:hover {
-    transform: scale(1.2);
-}
-
-.site-search.is-active .site-search-remove {
-    visibility: visible;
-}
-
-.site-search-mobile {
-    display: none;
-}
-
-@media (max-width: 930px) {
-    .site-header .site-search-wrapper {
-        max-width: -moz-fit-content;
-        max-width: fit-content;
-    }
-
-    .site-header .site-search {
-        display: none;
-    }
-
-    .site-header .site-search-mobile {
-        --search-mobile-size: 40px;
-        display: flex;
-        width: var(--search-mobile-size);
-        height: var(--search-mobile-size);
-        border: 1px solid var(--link-head);
-        border-radius: calc(var(--search-mobile-size) / 2);
-        justify-content: center;
-        align-items: center;
-        fill: var(--link-head);
-    }
-}
-
-.site-search-results .show-more {
-    margin-block-start: 1rem;
-    display: inline-block;
-    font-size: 1.2rem;
-    border-radius: 100px;
-    text-decoration: none;
-    text-align: center;
-    padding: 0.2em 0.6em 0.3em 0.6em;
-    color: var(--aft-link-alt);
-    background-color: var(--fore-link);
-    cursor: pointer;
-}
-
-.result-headings {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-.result-headings li {
-    text-align: left;
-    font-size: 1rem;
-}
-
-header .result-headings li {
-    padding: 0.1rem 3.6rem;
-}
-
-.show-more {
-    padding: 0.5em 1em;
-    background-color: var(--fore-link);
-    color: var(--aft-link-alt);
-}
-
-/* Search dialog */
-
-.search-dialog {
-    margin: auto;
-    padding: 2rem 3rem;
-    border-radius: var(--block-radius);
-    box-shadow: var(--box-shadow);
-    height: calc(90vh - 4em);
-    width: calc(80vw - 6em);
-    max-width: 860px;
-
-    @media (max-width: 860px) {
-        /* Fallback */
-        height: calc(100vh - 4rem);
-        width: calc(100vw - 6rem);
-        /* Ideal units */
-        height: calc(100dvh - 4rem);
-        width: calc(100dvw - 6rem);
-    }
-}
-
-.search-dialog::backdrop {
-    background-color: #000;
-    opacity: 0.5;
-}
-
-.search-dialog form {
-    margin-top: 2rem;
-}
-
-#site-search-close {
-    float: right;
-    position: relative;
-    top: -1rem;
-    left: 2.5rem;
-    background: none;
-    cursor: pointer;
-    font-size: 2rem;
-    stroke: var(--link-head);
-}
 
 /* Articles */
 
