--- a/src/themes/accelerator/components/Search.astro
+++ b/src/themes/accelerator/components/Search.astro
@@ -22,16 +22,11 @@ const accelerator = new Accelerator(SITE);
 ---
 <div class="site-search-wrapper">
 {showSearch &&
-  <div class="site-search-overlay"></div>
   <form method="GET" action={SITE.search.fallbackUrl ?? "https://www.google.com/search"} role="search" autocomplete="off" data-sourcedata={SITE.subfolder + "/search.json"}>
     <fieldset>
       <input type="hidden" name={SITE.search.fallbackSite ?? "q"} value={"site:" + siteUrl} />
       <input type="text" name={SITE.search.fallbackSite ?? "q"} class="site-search-query" placeholder={_(Translations.search.search_for)} spellcheck="true" autocomplete="off" />
-      <button class="site-search-remove" type="button">
-        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
-          <path d="M7.585 5.5L10.7122 2.37281C11.0959 1.98906 11.0959 1.36687 10.7122 0.982812L10.0172 0.287813C9.63344 -0.0959375 9.01125 -0.0959375 8.62719 0.287813L5.5 3.415L2.37281 0.287813C1.98906 -0.0959375 1.36688 -0.0959375 0.982813 0.287813L0.287813 0.982812C-0.0959375 1.36656 -0.0959375 1.98875 0.287813 2.37281L3.415 5.5L0.287813 8.62719C-0.0959375 9.01094 -0.0959375 9.63312 0.287813 10.0172L0.982813 10.7122C1.36656 11.0959 1.98906 11.0959 2.37281 10.7122L5.5 7.585L8.62719 10.7122C9.01094 11.0959 9.63344 11.0959 10.0172 10.7122L10.7122 10.0172C11.0959 9.63344 11.0959 9.01125 10.7122 8.62719L7.585 5.5Z"></path>
-        </svg>
-      </button>
+      <button type="submit" set:html={_(Translations.search.submit)}></button>
     </fieldset>
   </form>
   <div class="site-search-results" data-title={_(Translations.search.results_title)} data-emptytitle={_(Translations.search.no_results_title)}>
