--- a/src/themes/accelerator/components/AuthorsMini.astro
+++ b/src/themes/accelerator/components/AuthorsMini.astro
@@ -4,16 +4,19 @@
 import { Accelerator } from 'astro-accelerator-utils';
 import type { Frontmatter } from 'astro-accelerator-utils/types/Frontmatter';
 import { SITE } from '@config';
-import { Translations, Lang } from '@util/Languages';;
+import { Translations, Lang } from '@util/Languages';
+import ReadingTime from '@components/ReadingTime.astro';
 
 const accelerator = new Accelerator(SITE);
-const stats = new accelerator.statistics('accelerator/components/AuthorsMini.astro');
+const stats = new accelerator.statistics(
+    'accelerator/components/AuthorsMini.astro'
+);
 stats.start();
 
 // Properties
 type Props = {
-  lang: string;
-  frontmatter: Frontmatter;
+    lang: string;
+    frontmatter: Frontmatter;
 };
 const { lang, frontmatter } = Astro.props satisfies Props;
 
@@ -22,29 +25,30 @@ const _ = Lang(lang);
 
 // Logic
 const authorList = accelerator.authors.forPost(frontmatter);
+const dateToShow =
+    frontmatter.modDate == null ? frontmatter.pubDate : frontmatter.modDate;
 
 stats.stop();
 ---
-{authorList.writers.length > 0 && 
-<div class="post-meta">
-  <div class="author-info">
-    <span>{ _(Translations.post.written_by) + ' ' }
-      {authorList.mainAuthor &&
-        <span>{ authorList.mainAuthor.frontmatter.title }</span>
-      }{authorList.contributors.map((writer) => (
-        <span>, </span><span>{ writer.frontmatter.title }</span>
-      ))}<br />
-      {frontmatter.modDate == null && 
-      <time datetime={ frontmatter.pubDate.toString() }>
-      { accelerator.dateFormatter.formatDate(frontmatter.pubDate, lang) }
-      </time>
-      }
-      {frontmatter.modDate != null &&
-      <time datetime={ frontmatter.modDate.toString() }>
-      { accelerator.dateFormatter.formatDate(frontmatter.modDate, lang) }
-      </time>
-      }
-    </span>
-  </div>
-</div>
+
+{
+    authorList.writers.length > 0 && (
+        <div class="post-meta">
+            <div class="author-info">
+                <span
+                    class="author-name"
+                    set:html={authorList.mainAuthor.frontmatter.title}
+                />
+                <time
+                    class="post-date"
+                    datetime={dateToShow.toString()}
+                    set:html={accelerator.dateFormatter.formatDate(
+                        dateToShow,
+                        lang
+                    )}
+                />
+                <ReadingTime lang={lang} frontmatter={frontmatter} />
+            </div>
+        </div>
+    )
 }
